updates git file

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,5 @@
 */
-/car_insurance.py
-/practicals_1.py
-/practicals_2.py
-/return_uniqe_item_list.py
-/read_yaml.py
-/salaries.csv
-/salaries.py
-/sam_tim_tables.py
-/tim_movies.csv
-/samuel_movies.csv
-/yaml_example.yaml
-/car_insurance.csv
 /db_creds.yaml
 /sales_db_creds.yaml
+/products.csv
+/various/
